--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_20_select.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_20_select.yaml
@@ -13,7 +13,7 @@ use_dist_in_explain : true
 works:
     work:
         time_secs: 60
-        active_terminals: 1
+        active_terminals: 120
         rate: unlimited
         warmup: 30
 microbenchmark:
@@ -43,7 +43,7 @@ microbenchmark:
         executeRules:
             -   workload: 20_col_select
                 run:
-                    -   name: Select_with_20cols_test
+                    -   name: select_with_20cols_test
                         weight: 100
                         queries:
                             -   query: SELECT * from table_20_cols where id=?
@@ -51,20 +51,3 @@ microbenchmark:
                                     -   util: RandomNumber
                                         params: [ 1, 10000000 ]
                                 count: 1
-            -   workload: 20_col_insert
-                run:
-                    -   name: insert_with_20cols_test
-                        weight: 100
-                        queries:
-                            -   query: insert into table_20_cols (k, c, pad, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10, col11, col12, col13, col14, col15, col16) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-                                count: 1
-                                bindings:
-                                    -   util: RandomNumber
-                                        params: [ 1, 1000000 ]
-                                    -   util: RandomAString
-                                        params: [ 120, 120 ]
-                                    -   util: RandomAString
-                                        params: [ 60, 60 ]
-                                    -   util: RandomNumber
-                                        count: 16
-                                        params: [ 1, 1000000 ]
