--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize/varying_rowsize_200b_insert.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize/varying_rowsize_200b_insert.yaml
@@ -13,7 +13,7 @@ use_dist_in_explain : true
 works:
     work:
         time_secs: 60
-        active_terminals: 1
+        active_terminals: 60
         rate: unlimited
         warmup: 30
 microbenchmark:
@@ -21,10 +21,10 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - drop table if exists table_4_cols_25kb;
-            - CREATE TABLE table_4_cols_25kb (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL, col1 TEXT, col2 TEXT, col3 TEXT, col4 TEXT, PRIMARY KEY (id));
+            - drop table if exists table_4_cols_200b;
+            - CREATE TABLE table_4_cols_200b (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL, col1 TEXT, col2 TEXT, col3 TEXT, col4 TEXT, PRIMARY KEY (id));
         loadRules:
-            -   table: table_4_cols_25kb
+            -   table: table_4_cols_200b
                 rows: 10000000
                 columns:
                     -   name: k
@@ -39,24 +39,14 @@ microbenchmark:
                     -   name: col
                         count: 4
                         util: RandomAString
-                        params: [ 5750, 5750 ]
+                        params: [ 2, 2 ]
         executeRules:
-            -   workload: 25kb_select
+            -   workload: 200b_insert
                 run:
-                    -   name: select_rowsize_25kb
+                    -   name: insert_rowsize_200b
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_25kb where id=?
-                                bindings:
-                                    -   util: RandomNumber
-                                        params: [ 1, 10000000 ]
-                                count: 1
-            -   workload: 25kbl_insert
-                run:
-                    -   name: insert_rowsize_25kb
-                        weight: 100
-                        queries:
-                            -   query: insert into table_4_cols_25kb (k, c, pad, col1, col2, col3, col4) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                            -   query: insert into table_4_cols_200b(k, c, pad, col1, col2, col3, col4) values (?,?,?)
                                 count: 1
                                 bindings:
                                     -   util: RandomNumber
@@ -67,4 +57,7 @@ microbenchmark:
                                         params: [ 60, 60 ]
                                     -   util: RandomAString
                                         count: 4
-                                        params: [ 5750, 5750 ]
+                                        params: [ 2, 2 ]
+
+
+
