- changing sequence cache for new tests

--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_100_insert.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_100_insert.yaml
@@ -23,6 +23,7 @@ microbenchmark:
         create:
             - drop table if exists table_100_cols;
             - CREATE TABLE table_100_cols (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL, col1 INT, col2 INT, col3 INT, col4 INT, col5 INT, col6 INT, col7 INT, col8 INT, col9 INT, col10 INT, col11 INT, col12 INT, col13 INT, col14 INT, col15 INT, col16 INT, col17 INT, col18 INT, col19 INT, col20 INT, col21 INT, col22 INT, col23 INT, col24 INT, col25 INT, col26 INT, col27 INT, col28 INT, col29 INT, col30 INT, col31 INT, col32 INT, col33 INT, col34 INT, col35 INT, col36 INT, col37 INT, col38 INT, col39 INT, col40 INT, col41 INT, col42 INT, col43 INT, col44 INT, col45 INT, col46 INT, col47 INT, col48 INT, col49 INT, col50 INT, col51 INT, col52 INT, col53 INT, col54 INT, col55 INT, col56 INT, col57 INT, col58 INT, col59 INT, col60 INT, col61 INT, col62 INT, col63 INT, col64 INT, col65 INT, col66 INT, col67 INT, col68 INT, col69 INT, col70 INT, col71 INT, col72 INT, col73 INT, col74 INT, col75 INT, col76 INT, col77 INT, col78 INT, col79 INT, col80 INT, col81 INT, col82 INT, col83 INT, col84 INT, col85 INT, col86 INT, col87 INT, col88 INT, col89 INT, col90 INT, col91 INT, col92 INT, col93 INT, col94 INT, col95 INT, col96 INT, PRIMARY KEY (id));
+            - ALTER SEQUENCE table_100_cols_id_seq  cache 1000
         loadRules:
             -   table: table_100_cols
                 rows: 10000000
