--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_4_insert.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_4_insert.yaml
@@ -23,6 +23,7 @@ microbenchmark:
         create:
             - drop table if exists table_4_cols;
             - CREATE TABLE table_4_cols (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL,  PRIMARY KEY (id));
+            - ALTER SEQUENCE table_4_cols_id_seq  cache 1000
         loadRules:
             -   table: table_4_cols
                 rows: 10000000
