--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize/varying_rowsize_125kb_select.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_rowsize/varying_rowsize_125kb_select.yaml
@@ -21,10 +21,11 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - drop table if exists table_4_cols_125kb;
-            - CREATE TABLE table_4_cols_125kb (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL, col1 TEXT, col2 TEXT, col3 TEXT, col4 TEXT, PRIMARY KEY (id));
+            - drop table if exists table_rowsize_125kb;
+            - CREATE TABLE table_rowsize_125kb (id SERIAL, k INTEGER DEFAULT '0' NOT NULL, c CHAR(120) DEFAULT '' NOT NULL, pad CHAR(60) DEFAULT '' NOT NULL, col1 TEXT, col2 TEXT, col3 TEXT, col4 TEXT, PRIMARY KEY (id));
+            - ALTER SEQUENCE table_rowsize_125kb_id_seq  cache 1000
         loadRules:
-            -   table: table_4_cols_125kb
+            -   table: table_rowsize_125kb
                 rows: 10000000
                 columns:
                     -   name: k
@@ -46,7 +47,7 @@ microbenchmark:
                     -   name: select_rowsize_125kb
                         weight: 100
                         queries:
-                            -   query: SELECT * from table_4_cols_125kb where id=?
+                            -   query: SELECT * from table_rowsize_125kb where id=?
                                 bindings:
                                     -   util: RandomNumber
                                         params: [ 1, 10000000 ]
