--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_20_insert.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_20_insert.yaml
@@ -44,7 +44,7 @@ microbenchmark:
         executeRules:
             -   workload: 20_col_insert
                 run:
-                    -   name: insert_with_20cols_test
+                    -   name: insert_20cols_table
                         weight: 100
                         queries:
                             -   query: insert into table_20_cols (k, c, pad, col1, col2, col3, col4, col5, col6, col7, col8, col9, col10, col11, col12, col13, col14, col15, col16) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
