--- a/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_4_select.yaml
+++ b/config/yugabyte/regression_pipelines/sizing_calc_experiments/varying_columns/varying_columns_4_select.yaml
@@ -38,9 +38,9 @@ microbenchmark:
                         util: RandomAString
                         params: [ 60, 60 ]
         executeRules:
-            -   workload: 4_col_select
+            -   workload: 4_col_select_all
                 run:
-                    -   name: select_with_4cols_test
+                    -   name: select_all_4cols_table
                         weight: 100
                         queries:
                             -   query: SELECT * from table_4_cols where id=?
@@ -50,7 +50,7 @@ microbenchmark:
                                 count: 1
             -   workload: 4_col_select
                 run:
-                    -   name: select_with_4cols_test
+                    -   name: select_1col_4cols_table
                         weight: 100
                         queries:
                             -   query: SELECT c from table_4_cols where id=?
