--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG12_bitmapscan_orCondition.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG12_bitmapscan_orCondition.yaml
@@ -1,6 +1,6 @@
 #TEST FOR YUGABYTE REGULAR TABLES
 #GOAL12 from tab Scan queries of doc https://docs.google.com/spreadsheets/d/1-M1i5tWJQJdbmtv7mz_20MZsT2Oqh_T3-6m12qKAMcA/edit#gid=796784261:
-# Bitmap scan on pkey, hash, and range columns using an OR condition - Varying number of rows returned
+# Bitmap scan with OR conditions on pkey and hash and range indexed columns
 #TESTS:
 #   Bitmap scan time to fetch 10 rows
 #   Bitmap scan time to fetch 100 rows
