--- a/config/yugabyte/regression_pipelines/retention_impact/retention_impact.yaml
+++ b/config/yugabyte/regression_pipelines/retention_impact/retention_impact.yaml
@@ -1,12 +1,12 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=true
 username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
-terminals: 25
+terminals: 30
 collect_pg_stat_statements: true
 yaml_version: v1.0
 use_dist_in_explain : true
@@ -29,7 +29,7 @@ microbenchmark:
         loadRules:
             - table: nets_
               count: 1
-              rows: 50000000
+              rows: 100000000
               columns:
                     - name: op_id_
                       count: 1
