--- a/config/yugabyte/regression_pipelines/retention_impact/retention_impact.yaml
+++ b/config/yugabyte/regression_pipelines/retention_impact/retention_impact.yaml
@@ -83,7 +83,7 @@ microbenchmark:
                     - name: db_user_id_
                       count: 1
                       util: HashedRandomString
-                      params: [ 1, 500]
+                      params: [ 1, 500, 10]
                     - name: shard_id_
                       count: 1
                       util: RandomNumber
@@ -109,7 +109,7 @@ microbenchmark:
                         - query: UPDATE nets_1 SET shard_id_1 = shard_id_1 + 1 WHERE db_user_id_1 = ? and shard_id_1 = ?
                           bindings:
                             - util: HashedRandomString
-                              params: [ 1, 500]
+                              params: [ 1, 500, 10]
                             - util: RandomInt
                               params: [ 21, 50 ]
                   - name: NetG1_2_delete_query
@@ -118,7 +118,7 @@ microbenchmark:
                         - query: delete from nets_1 where db_user_id_1 = ? and shard_id_1 = ?
                           bindings:
                             - util: HashedRandomString
-                              params: [ 1, 150 ]
+                              params: [ 1, 150 , 10]
                             - util: RandomInt
                               params: [ 1, 20 ]
                   - name: NetG1_3_scan_query_pointselect
@@ -127,7 +127,7 @@ microbenchmark:
                         - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
                           bindings:
                             - util: HashedRandomString
-                              params: [ 1, 500]
+                              params: [ 1, 500, 10]
                             - util: RandomInt
                               params: [ 1, 20 ]
                             - util: RandomInt
