--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING12_join_scale_parallel_workers.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING12_join_scale_parallel_workers.yaml
@@ -86,7 +86,7 @@ microbenchmark:
                     -   name: join_on_pk_3tbl
                         weight: 100
                         queries:
-                            -   query: /*+ set(max_parallel_workers_per_gather 2) */ select count(*) from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
+                            -   query: /*+ set(max_parallel_workers_per_gather 2) */ select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where a.col_bigint_card1_1<1000100 and  b.col_bigint_card2_1 <1000100;
 
             -   workload: JOING12_2_join_with_4_parallel_workers_project_aggregate_zero_rows
                 customTags: schematype=regular,partition=hash,pkey=hash,cardinality=multiple,projectition=aggregate,queryshape=join,joinon=pkey
@@ -94,7 +94,7 @@ microbenchmark:
                     -   name: join_on_pk_3tbl
                         weight: 100
                         queries:
-                            -   query: /*+ set(max_parallel_workers_per_gather 4) */ select count(*) from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
+                            -   query: /*+ set(max_parallel_workers_per_gather 4) */ select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where a.col_bigint_card1_1<1000100 and  b.col_bigint_card2_1 <1000100;
 
             -   workload: JOING12_3_join_with_8_parallel_workers_project_aggregate_zero_rows
                 customTags: schematype=regular,partition=hash,pkey=hash,cardinality=multiple,projectition=aggregate,queryshape=join,joinon=pkey
@@ -102,7 +102,7 @@ microbenchmark:
                     -   name: join_on_pk_3tbl
                         weight: 100
                         queries:
-                            -   query: /*+ set(max_parallel_workers_per_gather 8) */ select count(*) from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
+                            -   query: /*+ set(max_parallel_workers_per_gather 8) */ select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where a.col_bigint_card1_1<1000100 and  b.col_bigint_card2_1 <1000100;
 
             -   workload: JOING12_4_join_with_2_parallel_workers_project_aggregate_billion_rows
                 customTags: schematype=regular,partition=hash,pkey=hash,cardinality=multiple,projectition=aggregate,queryshape=join,joinon=pkey
